@@ -43,6 +43,8 @@
  *  \li \subpage Page_DeviceSupport - Current Device and Hardware Support
  *  \li \subpage Page_ChangeLog - Project Changelog
  *  \li \subpage Page_FutureChanges - Planned Changes to the Library
+ *  \li \subpage Page_GettingStarted - Getting started with LUFA
+ *  \li \subpage Page_DevelopingWithLUFA - Developing with LUFA
  *  \li \subpage Page_LUFAPoweredProjects - Other Projects Using LUFA
  *  \li \subpage Page_Resources - LUFA and USB Related Resources
  */
